--- a/index.css
+++ b/index.css
@@ -1,9 +1,28 @@
 @import "tailwindcss";
 
+@font-face {
+    font-family: Nunito;
+    font-style: normal;
+    src: url(/src/fonts/Nunito-VariableFont_wght.ttf);
+    font-weight: 200 300 400 500 600 700 800 900;
+}
+
+@font-face {
+    font-family: Roboto;
+    font-style: normal;
+    src: url(/src/fonts/Roboto-VariableFont_wdth\,wght.ttf);
+    font-weight: 100 200 300 400 500 600 700 800 900;
+}
+
 @theme {
+    /* Colors */
     --color-eerie-900: #0f0f0f;
     --color-eerie-800: #262626;
     --color-eerie-700: #4c4c4c;
     --color-eerie-600: #757575;
     --color-latte: #f7f3e3;
+
+    /* Fonts */
+    --font-nunito: "Nunito", sans-serif;
+    --font-roboto: "Roboto", sans-serif;
 }
