Change selected text color.

--- a/index.css
+++ b/index.css
@@ -21,6 +21,9 @@
     --color-eerie-700: #4c4c4c;
     --color-eerie-600: #757575;
     --color-latte: #f7f3e3;
+    --color-selection-rose: #CC7178;
+    --color-selection-blue: #7798ab;
+    --color-mount-pink: #B287A3;
 
     /* Fonts */
     --font-nunito: "Nunito", sans-serif;
